🔧 Fix pyproject.toml package discovery issue
• Add hatch.build.targets.wheel configuration
• Specify packages = [\dexscreener_mcp\] for proper package detection
• Resolves hatchling build error during pip install -e .

Fixes: ValueError - Unable to determine which files to ship inside the wheel

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,9 @@ dev = [
 [project.scripts]
 dexscreener-mcp = "dexscreener_mcp.server:main"
 
+[tool.hatch.build.targets.wheel]
+packages = ["dexscreener_mcp"]
+
 [tool.black]
 line-length = 88
 target-version = ['py39']
