--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
 dependencies = [
     "mcp>=1.0.0",
     "httpx>=0.25.0",
-    "pydantic>=2.0.0",
+    "pydantic>=2.0.0,<3.0.0",
     "asyncio-throttle>=1.0.0",
     "structlog>=23.0.0",
     "tenacity>=8.0.0",
@@ -42,6 +42,11 @@ dev = [
     "mypy>=1.0.0",
     "ruff>=0.1.0",
     "pre-commit>=3.0.0",
+]
+# For environments with FastAPI compatibility issues
+fastapi-compat = [
+    "fastapi>=0.104.0",
+    "anyio>=3.7.1,<4.0.0",
 ]
 
 [project.scripts]
